# orthanc-rust-plugins

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
config/: http.json  orthanc.json  plugins.json  remote.json
config/docker/: plugins.json
hack/: orthanc
orthanc-plugin-bindings/: Cargo.toml  README.md
orthanc-plugin-bindings/src/: bindgen.rs  bindings.rs  lib.rs
plugins/s3/: Cargo.toml  build.rs
plugins/s3/src/: bindgen.rs  config.rs  events.rs  lib.rs  plugin.rs
